fixed alignment on people table

--- a/cmn/MVP.css
+++ b/cmn/MVP.css
@@ -1699,6 +1699,9 @@ ul.spaced-list > li:nth-child(odd) {
     padding-left: 10px;
     width: 230px;
 }
+.status-table.people-table > tbody > tr > td.shareholder-column.docname-column {
+    padding-left: 20px;
+}
 .status-table.investor > tbody > tr > td.shareholder-column.docname-column {
     padding-left: 20px;
 }
